@@ -1,15 +1,12 @@
 package com.masteryhub.todoapp.service;
 
-import com.masteryhub.todoapp.dto.DueDateDto;
+import com.masteryhub.todoapp.dto.MessageDto;
 import com.masteryhub.todoapp.dto.RequestTodoDto;
 import com.masteryhub.todoapp.dto.ResponseTodoDto;
-import com.masteryhub.todoapp.models.Status;
-import com.masteryhub.todoapp.models.Tags;
 import com.masteryhub.todoapp.models.TodoEntity;
 import com.masteryhub.todoapp.models.UserEntity;
 import com.masteryhub.todoapp.repository.TodoRepository;
 import com.masteryhub.todoapp.repository.UserRepository;
-import com.masteryhub.todoapp.security.JwtGenerator;
 import java.time.Instant;
 import java.util.*;
 import java.util.concurrent.atomic.AtomicLong;
@@ -20,26 +17,25 @@ import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.core.Authentication;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 
 @Service
 public class TodoService {
 
-  private final JwtGenerator jwtGenerator;
   private final UserRepository userRepository;
   private final TodoRepository todoRepository;
 
   @Autowired
-  public TodoService(
-      JwtGenerator jwtGenerator, UserRepository userRepository, TodoRepository todoRepository) {
-    this.jwtGenerator = jwtGenerator;
+  public TodoService(UserRepository userRepository, TodoRepository todoRepository) {
     this.userRepository = userRepository;
     this.todoRepository = todoRepository;
   }
 
-  public ResponseEntity<ResponseTodoDto> createTodo(String token, RequestTodoDto requestTodoDto) {
-    token = token.substring(7);
-    String username = jwtGenerator.getUsernameFromJWT(token);
+  public ResponseEntity<ResponseTodoDto> createTodo(RequestTodoDto requestTodoDto) {
+    Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+    String username = authentication.getName();
     Optional<UserEntity> user = userRepository.findByUsername(username);
     TodoEntity todo = new TodoEntity(requestTodoDto);
     long customId = user.get().getTodosIds().size() + 1;
@@ -50,8 +46,9 @@ public class TodoService {
     return new ResponseEntity<>(ResponseTodoDto.from(todo), HttpStatus.CREATED);
   }
 
-  public ResponseEntity<ResponseTodoDto> getTodo(String token, Long id) {
-    String username = jwtGenerator.getUsernameFromJWT(token.substring(7));
+  public ResponseEntity<ResponseTodoDto> getTodo(Long id) {
+    Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+    String username = authentication.getName();
     Optional<UserEntity> user = userRepository.findByUsername(username);
     List<TodoEntity> todos = todoRepository.findByCustomId(id);
     if (todos.isEmpty()) {
@@ -68,9 +65,9 @@ public class TodoService {
     return new ResponseEntity<>(userTodos, HttpStatus.OK);
   }
 
-  public ResponseEntity<List<ResponseTodoDto>> getTodos(String token, int page, int size) {
-    token = token.substring(7);
-    String username = jwtGenerator.getUsernameFromJWT(token);
+  public ResponseEntity<List<ResponseTodoDto>> getTodos(int page, int size) {
+    Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+    String username = authentication.getName();
     Optional<UserEntity> user = userRepository.findByUsername(username);
     if (page > 0) page--;
     List<String> todoIds = user.get().getTodosIds();
@@ -80,28 +77,31 @@ public class TodoService {
     return new ResponseEntity<>(responsePage.getContent(), HttpStatus.OK);
   }
 
-  public ResponseEntity<List<ResponseTodoDto>> getTodosByStatus(
-      String token, String status, int page, int size) {
-    token = token.substring(7);
-    Status statusEnum;
-    statusEnum = Status.valueOf(status.toUpperCase());
-    String username = jwtGenerator.getUsernameFromJWT(token);
+  public ResponseEntity<List<ResponseTodoDto>> filterTodos(
+      RequestTodoDto requestTodoDto, int page, int size) {
+    Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+    String username = authentication.getName();
     Optional<UserEntity> user = userRepository.findByUsername(username);
     List<String> todosids = user.get().getTodosIds();
     if (page > 0) page--;
     Pageable pageable = PageRequest.of(page, size);
     Page<TodoEntity> todoPage =
-        todoRepository.findByIdInAndStatusAndDeletedAtIsNull(todosids, statusEnum, pageable);
+        todoRepository.findByTitleContainingIgnoreCaseAndStatusAndTagsInAndDeletedAtIsNull(
+            todosids,
+            requestTodoDto.getTitle(),
+            requestTodoDto.getStatus(),
+            requestTodoDto.getTags(),
+            pageable);
     return ResponseEntity.ok(todoPage.map(ResponseTodoDto::from).getContent());
   }
 
-  public ResponseEntity<ResponseTodoDto> editTodo(String token, RequestTodoDto requestTodoDto) {
-    token = token.substring(7);
-    String username = jwtGenerator.getUsernameFromJWT(token);
+  public ResponseEntity<ResponseTodoDto> editTodo(RequestTodoDto requestTodoDto, Long id) {
+    Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+    String username = authentication.getName();
     Optional<UserEntity> user = userRepository.findByUsername(username);
     List<String> todosids = user.get().getTodosIds();
     TodoEntity todoRes =
-        todoRepository.findByCustomId(requestTodoDto.getCustomId()).stream()
+        todoRepository.findByCustomId(id).stream()
             .filter(todo -> todosids.contains(todo.getId().toString()))
             .findFirst()
             .orElse(null);
@@ -117,24 +117,22 @@ public class TodoService {
     return new ResponseEntity<>(ResponseTodoDto.from(todoRes), HttpStatus.OK);
   }
 
-  public ResponseEntity<List<ResponseTodoDto>> editManyTodos(
-      String token, List<RequestTodoDto> todoDtoList) {
-    token = token.substring(7);
-    String username = jwtGenerator.getUsernameFromJWT(token);
+  public ResponseEntity<List<ResponseTodoDto>> editManyTodos(List<RequestTodoDto> todoDtoList) {
+    Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+    String username = authentication.getName();
     Optional<UserEntity> user = userRepository.findByUsername(username);
     List<String> todosids = user.get().getTodosIds();
-    List<Long> requestedTodoIds = todoDtoList.stream().map(RequestTodoDto::getCustomId).toList();
+    List<Long> requestedTodoIds = todoDtoList.stream().map(RequestTodoDto::getId).toList();
     List<TodoEntity> todos =
         todoRepository.findAllByCustomIdIn(requestedTodoIds).stream()
             .filter(todo -> todosids.contains(todo.getId().toString()))
             .toList();
-    System.out.println(todos);
     if (todos.isEmpty()) {
       return ResponseEntity.status(HttpStatus.NOT_FOUND).build();
     }
     for (RequestTodoDto todoDto : todoDtoList) {
       for (TodoEntity todo : todos) {
-        if (todo.getCustomId().equals(todoDto.getCustomId())) {
+        if (todo.getCustomId().equals(todoDto.getId())) {
           todo.setTitle(todoDto.getTitle());
           todo.setDescription(todoDto.getDescription());
           todo.setStatus(todoDto.getStatus());
@@ -145,13 +143,12 @@ public class TodoService {
     }
     todoRepository.saveAll(todos);
     List<ResponseTodoDto> responseDtos = todos.stream().map(ResponseTodoDto::from).toList();
-
     return ResponseEntity.ok(responseDtos);
   }
 
-  public ResponseEntity<String> hardDeleteTodo(String token, Long id) {
-    token = token.substring(7);
-    String username = jwtGenerator.getUsernameFromJWT(token);
+  public ResponseEntity<String> hardDeleteTodo(Long id) {
+    Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+    String username = authentication.getName();
     Optional<UserEntity> user = userRepository.findByUsername(username);
     List<String> todosids = user.get().getTodosIds();
     TodoEntity todoRes =
@@ -175,12 +172,12 @@ public class TodoService {
     return new ResponseEntity<>("Todo deleted successfully", HttpStatus.OK);
   }
 
-  public ResponseEntity<String> hardDeleteManyTodos(String token, String ids) {
+  public ResponseEntity<String> hardDeleteManyTodos(String ids) {
     if (ids == null || ids.isEmpty()) {
       return new ResponseEntity<>("No ids provided", HttpStatus.BAD_REQUEST);
     }
-    token = token.substring(7);
-    String username = jwtGenerator.getUsernameFromJWT(token);
+    Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+    String username = authentication.getName();
     Optional<UserEntity> user = userRepository.findByUsername(username);
     List<Long> idList =
         Arrays.stream(ids.split(","))
@@ -210,9 +207,9 @@ public class TodoService {
     return new ResponseEntity<>("Todos deleted successfully", HttpStatus.OK);
   }
 
-  public ResponseEntity<String> hardDeleteAllTodos(String token) {
-    token = token.substring(7);
-    String username = jwtGenerator.getUsernameFromJWT(token);
+  public ResponseEntity<String> hardDeleteAllTodos() {
+    Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+    String username = authentication.getName();
     Optional<UserEntity> user = userRepository.findByUsername(username);
     List<String> todosids = user.get().getTodosIds();
     List<TodoEntity> todoRes = todoRepository.findAllById(todosids);
@@ -234,9 +231,9 @@ public class TodoService {
     return new ResponseEntity<>("All todos deleted successfully", HttpStatus.OK);
   }
 
-  public ResponseEntity<String> softDeleteTodo(String token, Long id) {
-    token = token.substring(7);
-    String username = jwtGenerator.getUsernameFromJWT(token);
+  public ResponseEntity<MessageDto> softDeleteTodo(Long id) {
+    Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+    String username = authentication.getName();
     Optional<UserEntity> user = userRepository.findByUsername(username);
     List<String> todosids = user.get().getTodosIds();
     TodoEntity todoRes =
@@ -249,19 +246,16 @@ public class TodoService {
     }
     todoRes.setDeletedAt(Instant.now());
     todoRepository.save(todoRes);
-    return new ResponseEntity<>("Todo soft deleted successfully", HttpStatus.OK);
+    MessageDto message = new MessageDto();
+    message.setMessage("Todo Deleted Successfully");
+    return new ResponseEntity<>(message, HttpStatus.OK);
   }
 
-  public ResponseEntity<String> softDeleteManyTodo(String token, String ids) {
-    token = token.substring(7);
-    String username = jwtGenerator.getUsernameFromJWT(token);
+  public ResponseEntity<MessageDto> softDeleteManyTodo(List<RequestTodoDto> todoDtoList) {
+    Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+    String username = authentication.getName();
     Optional<UserEntity> user = userRepository.findByUsername(username);
-    List<Long> idList;
-    idList =
-        Arrays.stream(ids.split(","))
-            .map(String::trim)
-            .map(Long::parseLong)
-            .collect(Collectors.toList());
+    List<Long> idList = todoDtoList.stream().map(RequestTodoDto::getId).toList();
     List<String> todosids = user.get().getTodosIds();
     List<TodoEntity> todoRes =
         todoRepository.findAllByCustomIdIn(idList).stream()
@@ -274,12 +268,14 @@ public class TodoService {
       todo.setDeletedAt(Instant.now());
     }
     todoRepository.saveAll(todoRes);
-    return new ResponseEntity<>("Many todos soft deleted successfully", HttpStatus.OK);
+    MessageDto message = new MessageDto();
+    message.setMessage("Todos Deleted Successfully");
+    return new ResponseEntity<>(message, HttpStatus.OK);
   }
 
-  public ResponseEntity<String> softDeleteAllTodo(String token) {
-    token = token.substring(7);
-    String username = jwtGenerator.getUsernameFromJWT(token);
+  public ResponseEntity<MessageDto> softDeleteAllTodo() {
+    Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+    String username = authentication.getName();
     Optional<UserEntity> user = userRepository.findByUsername(username);
     List<String> todosids = user.get().getTodosIds();
     List<TodoEntity> todoRes = todoRepository.findAllById(todosids);
@@ -290,12 +286,14 @@ public class TodoService {
       todo.setDeletedAt(Instant.now());
     }
     todoRepository.saveAll(todoRes);
-    return new ResponseEntity<>("All todos soft deleted successfully", HttpStatus.OK);
+    MessageDto message = new MessageDto();
+    message.setMessage("All Todos Deleted Successfully");
+    return new ResponseEntity<>(message, HttpStatus.OK);
   }
 
-  public ResponseEntity<ResponseTodoDto> restoreTodo(String token, Long id) {
-    token = token.substring(7);
-    String username = jwtGenerator.getUsernameFromJWT(token);
+  public ResponseEntity<MessageDto> restoreTodo(Long id) {
+    Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+    String username = authentication.getName();
     Optional<UserEntity> user = userRepository.findByUsername(username);
     List<TodoEntity> todos = todoRepository.findByCustomId(id);
     if (todos.isEmpty()) {
@@ -313,19 +311,16 @@ public class TodoService {
     }
     userTodo.setDeletedAt(null);
     todoRepository.save(userTodo);
-    ResponseTodoDto userTodos = ResponseTodoDto.from(userTodo);
-    return new ResponseEntity<>(userTodos, HttpStatus.OK);
+    MessageDto message = new MessageDto();
+    message.setMessage("Todo Restored Successfully");
+    return new ResponseEntity<>(message, HttpStatus.OK);
   }
 
-  public ResponseEntity<List<ResponseTodoDto>> restoreManyTodo(String token, String ids) {
-    token = token.substring(7);
-    String username = jwtGenerator.getUsernameFromJWT(token);
+  public ResponseEntity<MessageDto> restoreManyTodo(List<RequestTodoDto> todoDtoList) {
+    Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+    String username = authentication.getName();
     Optional<UserEntity> user = userRepository.findByUsername(username);
-    List<Long> idList =
-        Arrays.stream(ids.split(","))
-            .map(String::trim)
-            .map(Long::parseLong)
-            .collect(Collectors.toList());
+    List<Long> idList = todoDtoList.stream().map(RequestTodoDto::getId).toList();
     List<String> todosids = user.get().getTodosIds();
     List<TodoEntity> todos =
         todoRepository.findAllByCustomIdIn(idList).stream()
@@ -338,13 +333,14 @@ public class TodoService {
       todo.setDeletedAt(null);
     }
     todoRepository.saveAll(todos);
-    List<ResponseTodoDto> responseDtos = todos.stream().map(ResponseTodoDto::from).toList();
-    return new ResponseEntity<>(responseDtos, HttpStatus.OK);
+    MessageDto message = new MessageDto();
+    message.setMessage("Todos Restored Successfully");
+    return new ResponseEntity<>(message, HttpStatus.OK);
   }
 
-  public ResponseEntity<List<ResponseTodoDto>> restoreAllTodo(String token) {
-    token = token.substring(7);
-    String username = jwtGenerator.getUsernameFromJWT(token);
+  public ResponseEntity<MessageDto> restoreAllTodo() {
+    Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+    String username = authentication.getName();
     Optional<UserEntity> user = userRepository.findByUsername(username);
     List<String> todosids = user.get().getTodosIds();
     List<TodoEntity> todos = todoRepository.findAllById(todosids);
@@ -353,58 +349,8 @@ public class TodoService {
     }
     todoRepository.saveAll(todos);
     userRepository.save(user.get());
-    List<ResponseTodoDto> responseDtos = todos.stream().map(ResponseTodoDto::from).toList();
-    return new ResponseEntity<>(responseDtos, HttpStatus.OK);
-  }
-
-  public ResponseEntity<ResponseTodoDto> setDueDate(String token, Long id, DueDateDto dueDate) {
-    token = token.substring(7);
-    String username = jwtGenerator.getUsernameFromJWT(token);
-    Optional<UserEntity> user = userRepository.findByUsername(username);
-    List<String> todosids = user.get().getTodosIds();
-    TodoEntity todoRes =
-        todoRepository.findByCustomId(id).stream()
-            .filter(todo -> todosids.contains(todo.getId()))
-            .findFirst()
-            .orElse(null);
-    if (todoRes == null) {
-      return ResponseEntity.status(HttpStatus.NOT_FOUND).build();
-    }
-    todoRes.setDueDate(dueDate.getDueDate());
-    todoRepository.save(todoRes);
-    return new ResponseEntity<>(ResponseTodoDto.from(todoRes), HttpStatus.OK);
-  }
-
-  public ResponseEntity<ResponseTodoDto> setTags(String token, Long id, List<String> tags) {
-    token = token.substring(7);
-    String username = jwtGenerator.getUsernameFromJWT(token);
-    Optional<UserEntity> user = userRepository.findByUsername(username);
-    List<String> todosids = user.get().getTodosIds();
-    TodoEntity todoRes =
-        todoRepository.findByCustomId(id).stream()
-            .filter(todo -> todosids.contains(todo.getId()))
-            .findFirst()
-            .orElse(null);
-    if (todoRes == null) {
-      return ResponseEntity.status(HttpStatus.NOT_FOUND).build();
-    }
-    List<Tags> validTags =
-        tags.stream()
-            .map(
-                tag -> {
-                  try {
-                    return Tags.valueOf(tag);
-                  } catch (IllegalArgumentException e) {
-                    return null;
-                  }
-                })
-            .filter(Objects::nonNull)
-            .collect(Collectors.toList());
-    if (validTags.isEmpty()) {
-      return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(null);
-    }
-    todoRes.setTags(validTags);
-    todoRepository.save(todoRes);
-    return new ResponseEntity<>(ResponseTodoDto.from(todoRes), HttpStatus.OK);
+    MessageDto message = new MessageDto();
+    message.setMessage("All Todos Restored Successfully");
+    return new ResponseEntity<>(message, HttpStatus.OK);
   }
 }
